...
                android:text="@string/schedule_view_text"
                android:fontFamily="sans-serif-condensed"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/clear_schedule_button"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:backgroundTint="#ff9a00"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/clear_schedule_button_text"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:layout_marginRight="5dp"
                app:cornerRadius="10dip" />

            <Button
                android:id="@+id/upload_schedule_button"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/upload_schedule_button_text"
                android:textColor="#FFFFFF"
                android:backgroundTint="#0066ce"
                android:fontFamily="sans-serif-condensed"
...
