...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:backgroundTint="#18181B"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/login_button_text"
        android:textColor="#FFFFFF"
...
